# Physical-AI-Edge-Robotics-Platform

./: .gitattributes  .gitignore  AGENTS.md  README.md
docs/: competency_matrix.md  ros2_humble_install_plan.md  runtime_governance.md  system_baseline.md  system_change_log.md  testing_jetson_phase1.md  testing_jetson_phase2.md
docs/adr/: README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/backlog/: 00_roadmap.md  M0_robotics_onboarding.md  M1_jetson_system_inventory.md  M2_ros2_humble_baseline.md  M3_fake_sensor_pipeline.md  M4_metrics_health_monitor.md  M5_tegrastats_monitor.md  M6_qos_latency_drop_lab.md  M7_edge_runtime_scripts.md  M8_p0_phase_gate.md
docs/backlog/issues/: CAP-001_capstone_demo_resume_summary_final_story.md  INDEX.md  P0-001_repository_skeleton_runtime_governance.md  P0-002_system_baseline_collector_change_ledger.md  P0-003_ros2_workspace_bootstrap_minimal_cpp_slice.md  P0-004_robotics_onboarding_guide_command_evidence.md  P0-005_edge_reliability_message_interface_contracts.md  P0-006_100hz_fake_sensor_publisher_tracer_slice.md  P0-007_processor_metrics_subscriber_tracer_slice.md  P0-008_rosbag_record_replay_workflow.md  P0-009_fault_injection_drop_delay.md  P0-010_health_monitor_configurable_thresholds.md  P0-018_p0_10_minute_gate_evidence_package.md  (+19 more)
docs/interfaces/: README.md  edge_reliability_contract.md
docs/onboarding/: README.md  interview_artifacts.md  ros2_beginner_onboarding.md
docs/prd/: Jetson_Physical_AI_PRD.docx  Jetson_Physical_AI_PRD.md
docs/runbooks/: fault_injection_drop_delay.md  health_monitor_thresholds.md  pressure_experiment_runner.md  qos_experiment_runner.md  rosbag_record_replay_workflow.md  runtime_lifecycle.md  system_health_integration.md  tegrastats_system_metrics.md
ros2_ws/src/: README.md
ros2_ws/src/edge_reliability_fake_sensor/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/edge_reliability_fake_sensor/config/: fake_sensor.yaml  fake_sensor_drop.yaml
ros2_ws/src/edge_reliability_fake_sensor/launch/: fake_sensor.launch.py
ros2_ws/src/edge_reliability_fake_sensor/src/: fake_sensor_adapter.cpp
ros2_ws/src/edge_reliability_health/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/edge_reliability_health/config/: health_monitor.yaml  health_monitor_system_nominal.yaml  health_monitor_system_pressure.yaml
ros2_ws/src/edge_reliability_health/include/edge_reliability_health/: health_rules.hpp
ros2_ws/src/edge_reliability_health/launch/: health_monitor.launch.py
ros2_ws/src/edge_reliability_health/src/: health_monitor.cpp
ros2_ws/src/edge_reliability_health/test/: health_rules_test.cpp
ros2_ws/src/edge_reliability_msgs/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/edge_reliability_msgs/msg/: HealthState.msg  PipelineMetrics.msg  SensorSample.msg  SystemMetrics.msg
ros2_ws/src/edge_reliability_processor/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/edge_reliability_processor/config/: processor.yaml  processor_delay.yaml
ros2_ws/src/edge_reliability_processor/include/edge_reliability_processor/: pipeline_metrics_accumulator.hpp
ros2_ws/src/edge_reliability_processor/launch/: processor.launch.py
ros2_ws/src/edge_reliability_processor/src/: sensor_processor.cpp
ros2_ws/src/edge_reliability_processor/test/: pipeline_metrics_accumulator_test.cpp
ros2_ws/src/edge_reliability_system/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/edge_reliability_system/config/: system_metrics.yaml
ros2_ws/src/edge_reliability_system/include/edge_reliability_system/: tegrastats_parser.hpp
ros2_ws/src/edge_reliability_system/launch/: system_metrics.launch.py
ros2_ws/src/edge_reliability_system/src/: system_metrics_node.cpp
ros2_ws/src/edge_reliability_system/test/: tegrastats_parser_test.cpp
ros2_ws/src/edge_reliability_system/testdata/: tegrastats_samples.txt
ros2_ws/src/edge_reliability_tracer/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/edge_reliability_tracer/config/: tracer.yaml
ros2_ws/src/edge_reliability_tracer/launch/: tracer.launch.py
ros2_ws/src/edge_reliability_tracer/src/: tracer_publisher.cpp  tracer_subscriber.cpp
scripts/: README.md  collect_system_baseline.sh  run_p0_006_fake_sensor_smoke.sh  run_p0_007_processor_smoke.sh  run_p0_008_rosbag_replay_smoke.sh  run_p0_009_fault_injection_smoke.sh  run_p0_010_health_monitor_smoke.sh  run_p0_011_system_metrics_smoke.sh  run_p0_012_system_health_smoke.sh  run_p0_013_qos_experiment_smoke.sh  run_p0_014_pressure_smoke.sh  run_p0_015_runtime_lifecycle_smoke.sh  setup_runtime_dirs.ps1  setup_runtime_dirs.sh  start_runtime.sh  stop_runtime.sh  summarize_apt_simulation.sh  summarize_system_baseline.sh  verify_p0_004_onboarding_docs.ps1  verify_p0_005_interface_contracts.ps1  verify_p0_006_completion_gate.ps1  verify_p0_006_fake_sensor_slice.ps1  verify_p0_006_smoke_report.ps1  verify_p0_007_completion_gate.ps1  verify_p0_007_processor_metrics_slice.ps1  verify_p0_007_smoke_report.ps1  verify_p0_008_completion_gate.ps1  verify_p0_008_rosbag_workflow.ps1  verify_p0_008_smoke_report.ps1  verify_p0_009_completion_gate.ps1  verify_p0_009_fault_injection.ps1  verify_p0_009_smoke_report.ps1  verify_p0_010_completion_gate.ps1  verify_p0_010_health_monitor.ps1  verify_p0_010_smoke_report.ps1  verify_p0_011_completion_gate.ps1  verify_p0_011_smoke_report.ps1  verify_p0_011_system_metrics.ps1  verify_p0_012_completion_gate.ps1  verify_p0_012_smoke_report.ps1  (+11 more)
scripts/testdata/: p0_006_smoke_report_fail.txt  p0_006_smoke_report_pass.txt  p0_007_smoke_report_fail.txt  p0_007_smoke_report_pass.txt  p0_008_smoke_report_fail.txt  p0_008_smoke_report_pass.txt  p0_009_smoke_report_fail.txt  p0_009_smoke_report_pass.txt  p0_010_smoke_report_fail.txt  p0_010_smoke_report_pass.txt  p0_011_smoke_report_fail.txt  p0_011_smoke_report_pass.txt  p0_012_smoke_report_fail.txt  p0_012_smoke_report_pass.txt  p0_013_smoke_report_fail.txt  p0_013_smoke_report_pass.txt  p0_014_smoke_report_fail.txt  p0_014_smoke_report_pass.txt  p0_015_smoke_report_fail.txt  p0_015_smoke_report_pass.txt
tools/: README.md
