cmake_minimum_required(VERSION 3.8)
project(edge_reliability_msgs)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/SensorSample.msg"
  "msg/PipelineMetrics.msg"
  "msg/SystemMetrics.msg"
  "msg/HealthState.msg"
  DEPENDENCIES std_msgs
)

ament_export_dependencies(rosidl_default_runtime)
ament_package()
