<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>edge_reliability_processor</name>
  <version>0.1.0</version>
  <description>Processor metrics subscriber for the Edge Robotics Reliability Lab.</description>
  <maintainer email="maintainer@example.com">Physical AI Edge Robotics Platform</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>edge_reliability_msgs</depend>

  <exec_depend>edge_reliability_fake_sensor</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
